--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -10,7 +10,9 @@
     height: 100%;
     background-image: url('./ANIRUM.png');
 }
-
+.logout {
+    cursor: pointer;
+}
 .cotainer_header {
     display: flex;
     justify-content: row;
